--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/20_sautedmushrooms/20_32.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/20_sautedmushrooms/20_32.yaml
@@ -3,8 +3,8 @@ is_error: true
 recording_id: '20_32'
 step_annotations:
 - description: Rinse-Rinse 3 mushrooms under cold water
-  end_time: -1.0
-  start_time: -1.0
+  end_time: 57
+  start_time: 4
   step_id: 206
 - description: pat-pat rinsed mushrooms dry with a paper towel
   end_time: 81.169
@@ -33,16 +33,20 @@ step_annotations:
     tag: Temperature Error
   - description: Heat pan only, and forget to add oil
     tag: Preparation Error
+  - description: Step performed before preparing the ingredients
+    tag: Order Error
   modified_description: Heat-Heat a large skillet over medium heat
   start_time: 280.14
   step_id: 215
 - description: Chop-Chop 1 shallot
   end_time: 540.082
   errors:
-  - description: Used less shallot
+  - description: Chopped 1/2 onion instead of 1 shallot
     tag: Measurement Error
   - description: Use onion instead of shallot
     tag: Preparation Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: Chop-Chop 1/2 onion
   start_time: 323.561
   step_id: 212
@@ -50,6 +54,8 @@ step_annotations:
   end_time: 605.873
   errors:
   - description: add oil now
+    tag: Order Error
+  - description: Step performed before preparing the ingredients
     tag: Order Error
   modified_description: add-Once the pan is hot, add oil and mushrooms
   start_time: 540.108
@@ -62,14 +68,18 @@ step_annotations:
     tag: Timing Error
   - description: dont wait until mushrooms start to soften and brown
     tag: Technique Error
+  - description: Step performed before preparing the ingredients
+    tag: Order Error
   modified_description: cook-cook for 1 minute, stirring often
   start_time: 607.769
   step_id: 213
 - description: Add-Add chopped shallot to the pan
   end_time: 735.48
   errors:
-  - description: Spill
+  - description: Spill while adding chopped shallot to the pan
     tag: Technique Error
+  - description: Step performed before preparing the ingredients
+    tag: Order Error
   modified_description: Add-Add chopped shallot to the pan but spill
   start_time: 700.444
   step_id: 209
@@ -78,18 +88,25 @@ step_annotations:
   errors:
   - description: Use 1 garlic clove
     tag: Measurement Error
+  - description: Step performed after heating the contents of the pan
+    tag: Order Error
   modified_description: Peel-Peel 1 garlic clove
   start_time: 740.554
   step_id: 176
 - description: cook-cook the pan, often stirring, for 1 minute
-  end_time: -1.0
-  start_time: -1.0
+  end_time: 1050
+  errors:
+  - description: Cooked for more than 4 minutes
+    tag: Timing Error
+  start_time: 700
   step_id: 207
 - description: mince-mince garlic cloves
   end_time: 947.645
   errors:
   - description: Slice garlic cloves
     tag: Technique Error
+  - description: Step performed after heating the contents of the pan
+    tag: Order Error
   modified_description: mince-slice garlic cloves
   start_time: 915.173
   step_id: 211
@@ -97,14 +114,14 @@ step_annotations:
   end_time: 960.769
   errors:
   - description: Add 1 clove of sliced garlic due to previous step errors
-    tag: Preparation Error
+    tag: Measurement Error
   modified_description: Add-Add 1 clove of sliced garlic to the pan
   start_time: 953.493
   step_id: 218
 - description: Add-1/4 tbsp balsamic vinegar to the pan
   end_time: 1049.94
   errors:
-  - description: Add 1/2 tbsp balsamic vinegar
+  - description: Add 1/2 tbsp instead of 1/4 tbsp balsamic vinegar
     tag: Measurement Error
   - description: Add honey instead of balsamic vinegar
     tag: Preparation Error
@@ -112,7 +129,10 @@ step_annotations:
   start_time: 982.223
   step_id: 217
 - description: cook-cook the pan, often stirring, for 1 minute
-  end_time: 1117.4470000000001
+  end_time: 1142
+  errors:
+  - description: Cooked for 1.5 minutes instead of 1 minute, forgot to turn off the heat after the alarm
+    tag: Timing Error
   start_time: 1050.603
   step_id: 207
 - description: Season-pepper on pan to taste
