--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/20_sautedmushrooms/20_47.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/20_sautedmushrooms/20_47.yaml
@@ -15,21 +15,20 @@ step_annotations:
   errors:
   - description: Setting it to low-medium heat instead of medium-high heat.
     tag: Temperature Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing the ingredients
     tag: Order Error
-  modified_description: Heat-Heat 1 tbsp olive oil in a large skillet over low-medium
-    heat
+  modified_description: Heat-Heat 1 tbsp olive oil in a large skillet over low-medium heat
   start_time: 200.153
   step_id: 215
 - description: Rinse-Rinse 3 mushrooms under cold water
   end_time: 306.514
   errors:
-  - description: Not rinsing one mushroom and rinsing only two mushrooms.
+  - description: Rinse only 2 mushrooms instead of 3 mushrooms.
     tag: Measurement Error
-  - description: Not rinsing one mushroom and rinsing only two mushrooms.
+  - description: Using 1 soiled mushroom
     tag: Preparation Error
-  modified_description: Rinse-Rinse 2 mushrooms under cold water and don't rinse one
-    mushroom.
+  - description: Step performed after heating the pan
+    tag: Order Error
   start_time: 260.744
   step_id: 206
 - description: pat-pat rinsed mushrooms dry with a paper towel
@@ -37,6 +36,8 @@ step_annotations:
   errors:
   - description: Apply more pressure while patting rinsed mushrooms.
     tag: Technique Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: Pat-Pat forcefully the rinsed mushrooms dry with a paper towel.
   start_time: 315.032
   step_id: 205
@@ -45,7 +46,7 @@ step_annotations:
   errors:
   - description: Not completely peeling the garlic cloves.
     tag: Technique Error
-  - description: Step performed after correct order
+  - description: Step performed after heating the pan
     tag: Order Error
   modified_description: Peel-Peel 2 garlic cloves improperly.
   start_time: 360.729
@@ -55,7 +56,7 @@ step_annotations:
   errors:
   - description: Leaving stem to one of the mushroom.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after heating the pan
     tag: Order Error
   modified_description: Pull-Pull out mushroom stems for two and leave one stem for
     the mushroom.
@@ -66,7 +67,7 @@ step_annotations:
   errors:
   - description: Instead of slicing, chopping the mushrooms.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after heating the pan
     tag: Order Error
   modified_description: Chop-Chop the mushrooms.
   start_time: 502.62677836721855
@@ -80,12 +81,12 @@ step_annotations:
   step_id: 208
 - description: cook-cook for 3-5 minutes, stirring often, until mushrooms start to
     soften and brown
-  end_time: 829.5
+  end_time: 848.5
   errors:
   - description: Cooking for less than 2 minutes instead of 3-5 minutes and not making
       the mushrooms to turn brown.
     tag: Timing Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing the ingredients
     tag: Order Error
   modified_description: Cook-Cook for 2 minutes, stirring often, until mushrooms start
     to soften and brown.
@@ -96,26 +97,22 @@ step_annotations:
   errors:
   - description: Sprinkling the salt out of the pan.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing the ingredients
     tag: Order Error
   modified_description: Season-Season pan with salt and sprinkle some salt out of
     the pan.
   start_time: 833.181
   step_id: 220
 - description: cook-cook the pan, often stirring, for 1 minute
-  end_time: -1.0
-  errors:
-  - description: Cooking for only 30 seconds instead of 1 minute.
-    tag: Timing Error
-  modified_description: Cook-Cook the pan, often stirring, for 30 seconds
-  start_time: -1.0
+  end_time: 900
+  start_time: 849
   step_id: 207
 - description: mince-mince garlic cloves
   end_time: 1020.212
   errors:
   - description: Instead of mincing the garlic cloves only chopping.
     tag: Technique Error
-  - description: Step performed after correct order
+  - description: Step performed after cooking the mushrooms.
     tag: Order Error
   modified_description: Chop-Chop garlic cloves.
   start_time: 907.613
@@ -123,7 +120,7 @@ step_annotations:
 - description: Add-Add 2 cloves of minced garlic to the pan
   end_time: 1040.543
   errors:
-  - description: While adding the minced garlic drop some of them.
+  - description: While adding the minced garlic spill some of them.
     tag: Technique Error
   - description: Step performed before correct order
     tag: Order Error
@@ -136,9 +133,7 @@ step_annotations:
   errors:
   - description: Instead of 1 minute cooking only for 15 seconds.
     tag: Timing Error
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
+  - description: Step performed before adding shallot to the pan
     tag: Order Error
   modified_description: cook-cook the pan, often stirring, for 15 seconds.
   start_time: 1043.445
@@ -146,25 +141,26 @@ step_annotations:
 - description: Add-Add chopped shallot to the pan
   end_time: 1095.172
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding minced garlic and cooking for a minute.
     tag: Order Error
   start_time: 1079.001
   step_id: 209
 - description: Season-pepper on pan to taste
   end_time: 1123.842
   errors:
-  - description: Step performed before correct order
-    tag: Order Error
+  - description: Seasoning using hand instead of a spoon.
+    tag: Preparation Error
   start_time: 1103.126
   step_id: 219
 - description: Transfer-Transfer the contents of the pan to a serving dish
   end_time: 1162.132
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 1139.341
   step_id: 216
 - description: Add-1/4 tbsp balsamic vinegar to the pan
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 217
